--- a/client/src/app/book/book.component.html
+++ b/client/src/app/book/book.component.html
@@ -1,9 +1,56 @@
+<!--<app-nav-bar></app-nav-bar>-->
+<!--<div class="container-fluid">-->
+<!--  <div class="row row-cols-1 row-cols-md-3 g-4">-->
+<!--    <div class="col" *ngFor="let book of books">-->
+<!--      <div class="card">-->
+<!--        <img [src]="book.imageUrl" class="card-img-top" alt="...">-->
+<!--        <div class="card-body">-->
+<!--          <h5 class="card-title">{{book.title}}</h5>-->
+<!--          <p class="card-text">{{book.description}}</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+<!--<app-nav-bar></app-nav-bar>-->
+<!--<div class="container-fluid">-->
+<!--  <div class="row row-cols-1 row-cols-md-3 g-4">-->
+<!--    <div class="col" *ngFor="let book of books">-->
+<!--      <div class="card">-->
+<!--        &lt;!&ndash; Use the custom pipe to sanitize the imageUrl &ndash;&gt;-->
+<!--        <img [src]="book.imageUrl | safeUrl" class="card-img-top" alt="...">-->
+<!--        <div class="card-body">-->
+<!--          <h5 class="card-title">{{book.title}}</h5>-->
+<!--          <p class="card-text">{{book.description}}</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+<!--<app-nav-bar></app-nav-bar>-->
+<!--<div class="container-fluid">-->
+<!--  <div class="row row-cols-1 row-cols-md-3 g-4">-->
+<!--    <div class="col" *ngFor="let book of books">-->
+<!--      <div class="card">-->
+<!--        <img [src]="book.imageBase64" class="card-img-top" alt="...">-->
+<!--        <div class="card-body">-->
+<!--          <h5 class="card-title">{{book.title}}</h5>-->
+<!--          <p class="card-text">{{book.description}}</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+
 <app-nav-bar></app-nav-bar>
 <div class="container-fluid">
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col" *ngFor="let book of books">
       <div class="card">
-        <img [src]="book.image" class="card-img-top" alt="...">
+        <img [src]="book.imageUrl" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{book.title}}</h5>
           <p class="card-text">{{book.description}}</p>
